解决了长时间连接无动作被数据库踢下线的问题

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ plugins {
     id 'idea'
 }
 apply from: 'gretty.plugin'
-
+war {
+    archiveName 'WebSiteAnalysisKit.war'
+}
 group 'fwwbjnu'
 version '1.0-SNAPSHOT'
 
