--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
-jdk: oraclejdk8
 branches:
   only:
     - master
 before_install:
   - chmod +x gradlew
 script:
+  - jdk_switcher use oraclejdk8
   - ./gradlew war
   - ls ./build/libs
